# 3

./: .gitignore  CMakeLists.txt  README.md  checks.cpp  checks.hpp  lexer.hpp  main_cpp.l  main_cpp.y
AST/: AST.cpp  AST.hpp  Program.hpp  ProgramBuilder.cpp  ProgramBuilder.hpp  Types.cpp  Types.hpp
ast/: AST.cpp  Program.cpp  Types.cpp  Types.hpp
editor/vim/ftdetect/: 3.vim
editor/vim/syntax/: 3.vim
errorManager/: ErrorManager.cpp  ErrorManager.hpp
preprocessor/: preprocessor.cpp  preprocessor.hpp
src/: ast.cpp  ast.hpp  checks.cpp  checks.hpp  constants.hpp  lexer.hpp  main.cpp  main_cpp.l  main_cpp.y  program.hpp  s3c.cpp  s3c.hpp  scope.cpp  scope.hpp  symbol_table.cpp  symbol_table.hpp  type.cpp  type.hpp
src/ast/: AST.cpp  AST.hpp  Program.cpp  Program.hpp  ProgramBuilder.cpp  ProgramBuilder.hpp  Types.cpp  Types.hpp  ast.cpp  ast.hpp  builtins.hpp  declarations.hpp  location.cpp  location.hpp  node.cpp  node.hpp  node_pool.hpp  operators.hpp  program.cpp  program.hpp  statements.hpp  typednodes.hpp
src/compiler/: compiler.cpp  compiler.hpp  tools.cpp  tools.hpp  x86_64_gnu_linux.cpp  x86_64_gnu_linux.hpp
src/errorManager/: ErrorManager.cpp  ErrorManager.hpp
src/parser/: lexer.hpp  lexer_config.l  parser_config.y
src/preprocessor/: preprocessor.cpp  preprocessor.hpp
src/symtable/: Symbol.hpp  Symtable.cpp  Symtable.hpp  context_manager.cpp  context_manager.hpp  contextmanager.cpp  contextmanager.hpp  symbol.cpp  symbol.hpp  symbol_table.cpp  symbol_table.hpp  symtable.cpp  symtable.hpp  type.cpp  type.hpp
src/tools/: array.hpp  checks.cpp  checks.hpp  context_manager.cpp  context_manager.hpp  defer.hpp  errormanager.cpp  errormanager.hpp  errors_manager.cpp  errors_manager.hpp  mem.cpp  mem.hpp  messages.cpp  messages.hpp  program_builder.cpp  program_builder.hpp  programbuilder.cpp  programbuilder.hpp  s3c.cpp  s3c.hpp  string.cpp  string.hpp  strings.cpp  strings.hpp  type_utilities.cpp  type_utilities.hpp
src/tree/: location.cpp  location.hpp  node.cpp  node.hpp
src/type/: predicates.cpp  predicates.hpp  type.cpp  type.hpp
src/type_system/: types.cpp  types.hpp
src/typesystem/: Array.hpp  Composite.hpp  Functions.hpp  Type.hpp  types.cpp  types.hpp
symtable/: ContextManager.cpp  ContextManager.hpp  Symbol.cpp  Symbol.hpp  Symtable.cpp  Symtable.hpp
tests/: Makefile  arr.prog  definition.prog  example.prog  fib.3  fib.prog  run-test  test-arr.prog  test-errors.prog  test-recusion.prog  test.cpp  test.sh
tests/builtins/: operators.3  set.3
tests/compiler/: arithmetic.3  assignment.3  cnd.3  for.3  hello.3  printf_call.3  test_print.3
tests/config/: arithmetic.conf  arrays.conf  cnd.conf  for.conf  index_expr.conf  printlib.conf  use.conf  whl.conf
tests/config/errors/: arrays.conf  conversions_errors.conf  errors.conf  function_definition_errors.conf  function_errors.conf  invalid_use_errors.conf  wrong_main_type.conf
tests/data/: arrays.3  arrays_errors.3
tests/errors/: errors.3
tests/gold/: arithmetic.comp  arithmetic.out  arrays.comp  arrays.out  index_expr.comp  index_expr.out  printlib.comp  printlib.out
tests/gold/errors/: arrays.comp  conversion.comp  conversion.err  errors.comp  errors.err  function_redefinition.err  functions.comp  functions.err  invalid_use.comp  wrong_main_type.comp
tests/gold/stmts/: cnd.comp  cnd.out  for.comp  for.out  whl.comp  whl.out
tests/preprocessing/: main.3
tests/programs/: fib.3
tests/src/: arithmetic.3  arrays.3  function_call.3  index_expr.3  printlib.3
tests/symbols/: definitions.3  multiple_definitions1.3  multiple_definitions2.3  no_function_definition_order.3  recursion.3
tests/syntax/: comments.3  hello_world.3  syntax.3
tests/test-include/: main.prog  test-same.prog
tests/test-recursive-include/: main.prog  test-same.prog
tests/testlib/: cmd.hpp  config.cpp  config.hpp  test.cpp  test.hpp  timer.hpp
utilities/print/: Makefile  print.3  print.c
utilities/string/: Makefile  string.3  string.c
(+40 files in other folders)
